Bug 718637 - Notify that the document is loaded. r=MarcoZ

--HG--
extra : rebase_source : 9f3e91b4c2e8b4f2888030e66f84841cd62be52e